Erin's profile added and contemporary updated accordingly

--- a/class_desc.html
+++ b/class_desc.html
@@ -50,7 +50,7 @@
                         </div><br>
                         <h5><b>CONTEMPORARY BALLET</b></h5>
                         <div id="desc_text">
-                            <div id="italic-text"><i>Instructor: Robin Gifford</i></div><br>
+                            <div id="italic-text"><i>Instructor: Erin Dooley</i></div><br>
                             Contemporary Ballet is a mix of classical ballet and modern dance. It adapts ballet choreography to today by allowing a greater range of movement than the strict body lines of traditional ballet. This class starts off with a warm up of classical ballet and then combines it with modern dance to move the body in a variety of ways. The dances in this class combine emotions, technique, and the use of space for a beautiful end result.
                         </div><br>
                         <h5><b>BALLET</b></h5>
