--- a/instructors.html
+++ b/instructors.html
@@ -65,9 +65,29 @@
                     <div id="instr-text-box">
                         <div id="instr-name">
                             <h4><b>ROBIN GIFFORD</b></h4>
-                            <i>Ballet, Contemporary Ballet, & Jazz Instructor</i><br></div>
+                            <i>Ballet & Jazz Instructor</i><br></div>
                             <div id="instr-desc">
                                 Robin began Ballet lessons at age four with former Rockette Agnes Reeves. She continued her dance studies adding Jazz, Tap, and Modern. During High School she spent a summer at Jacob's Pillow, where she studied with Lila York, and a semester as an intern for The New York State Theater Institute. She was a teaching assistant at SUNY Buffalo and also at SUNY Albany, where she earned her BA. In addition to teaching for the RPI Dance Club, she has taught for EBA, Robin's Academy of Dance, and the Dance Experience. Her choreography has appeared at EBA's Brave New Dances, The Choreographer's Asylum, Capital Rep's production of Time Warner Cable's Miss/ter Television Pagent, and The Troy Music Hall's Duke Ellington's: Best of the Sacred Symphonies. She currently teaches adaptive dance for Washington, Warren, Albany ARC and Schenectady ARC. She also teaches competition classes at The Dance Experience. 
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-3">
+                    <div id="instr-photo-box">
+                        <br>
+                        <img src="images/erin.jpg" alt="Robin" height="150px" width="150px">
+                    </div>
+                </div>
+                <div class="col-sm-9">
+                    <div id="instr-text-box">
+                        <div id="instr-name">
+                            <h4><b>ERIN DOOLEY</b></h4>
+                            <i>Contemporary Ballet Instructor</i><br></div>
+                            <div id="instr-desc">
+                                Erin has been dancing for the past 20 years with a focus in ballet, modern, and contemporary. She grew up in Saratoga Springs, where she began her training at Saratoga City Ballet. During high school, she moved to New York City to dance in the Alvin Ailey Junior Division, as well as Joffrey Ballet School. Afterwards, she completed the 2-year Trainee Program at Joffrey Academy of Dance in Chicago. Erin then went on to study dance at SUNY Purchase, graduating summa cum laude in 2019. During her time there she worked with manyesteemed choreographers, as well as studied abroad in The Netherlands. She is currently a professional modern dancer with the Ellen Sinopoli Dance Company, resident company of The Egg in Albany.
                             </div>
                     </div>
                 </div>
@@ -81,6 +101,7 @@
                         <img src="images/sean2.jpg" alt="Sean" height="150px" width="150px">
                     </div>
                 </div>
+                
                 <div class="col-sm-9">
                     <div id="instr-text-box">
                         <div id="instr-name">
