Note about ages added

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <div class="col-sm-4 mb-3" id="memberinfo">
                     <center><h4><b><u>MEMBER INFO</u></b></h4></center>
                     &#9733; ALL EXPERIENCE LEVELS ARE ENCOURAGED TO JOIN!<br>
+                    &#9733; We welcome all dancers ages 14 and older! <em>(Note that classes consist of mostly college-aged students and adults)</em><br>
                     &#9733; The first week of classes is FREE!<br>
                     &#9733; For RPI students the semester fee is $65 for unlimited classes.<br>
                     &#9733; For Non-RPI students the semester fee is $100 for unlimited classes.<br>
