had a typo in anika's email

--- a/eboard.html
+++ b/eboard.html
@@ -89,7 +89,7 @@
                             <i>Showrunner</i><br></div>
                             <div id="off-desc">
                                 Anika is a sophomore dual majoring in math and business management. Her favorite style of dance is hip hop, but she also loves ballet, contemporary, and jazz. She has been dancing for twelve years.<br>
-                                <i>&#9733; Email: <a href="mailto:strela@rpi.edu">strela@rpi.edu</a></i>
+                                <i>&#9733; Email: <a href="mailto:strela2@rpi.edu">strela2@rpi.edu</a></i>
                             </div>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                             <div id="off-desc">
                                 Erica is a junior dual majoring in Computer Science and ITWS. Her favorite styles of dance are hip hop and contemporary. She has been dancing for six years.<br>
                                 <i>&#9733; Email: <a href="mailto:bertoe@rpi.edu">bertoe@rpi.edu</a></i>
-                            </div> 
+                            </div>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
             if ($(window).width() > 747) {
                 window.onscroll = function() {scrollFunction()};
             }
-            
+
             function scrollFunction() {
                 if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
                     document.getElementById("navbar").style.padding = "20px 10px";
