Updated 2020-2021 officers and renamed images

--- a/eboard.html
+++ b/eboard.html
@@ -58,37 +58,16 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="images/hannah.jpg" alt="Hannah" height="150px" width="150px">
-                    </div>
-                </div>
-                <div class="col-sm-7">
-                    <div id="off-text-box">
-                        <div id="off-name">
-                            <h4><b>HANNAH DE LOS SANTOS</b></h4>
-                            <i>President</i><br></div>
-                            <div id="off-desc">
-                                Hannah is a 4th-year PhD Student majoring in Computer Science. Her favorite styles of dance are ballet and lyrical. She has been dancing for six years.<br>
-                                <i>&#9733; Email: <a href="mailto:delosh@rpi.edu">delosh@rpi.edu</a></i>
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row no-gutters">
-                <div class="col-sm-5">
-                    <div id="off-photo-box">
-                        <br>
-                        <img src="images/anika.jpg" alt="Anika" height="150px" width="150px">
+                        <img src="images/anikastrelow.jpg" alt="Anika" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
                     <div id="off-text-box">
                         <div id="off-name">
                             <h4><b>ANIKA STRELOW</b></h4>
-                            <i>Showrunner</i><br></div>
+                            <i>President</i><br></div>
                             <div id="off-desc">
-                                Anika is a sophomore dual majoring in math and business management. Her favorite style of dance is hip hop, but she also loves ballet, contemporary, and jazz. She has been dancing for twelve years.<br>
+                                Anika is a junior dual majoring in math and business management. Her favorite style of dance is contemporary. She has been dancing for 13 years.<br>
                                 <i>&#9733; Email: <a href="mailto:strela2@rpi.edu">strela2@rpi.edu</a></i>
                             </div>
                     </div>
@@ -100,17 +79,17 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="images/larissa.jpg" alt="Larissa" height="150px" width="150px">
+                        <img src="images/morganford.jpg" alt="Morgan" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
                     <div id="off-text-box">
                         <div id="off-name">
-                            <h4><b>LARISSA HENSCH</b></h4>
-                            <i>Treasurer</i><br></div>
+                            <h4><b>MORGAN FORD</b></h4>
+                            <i>Showrunner</i><br></div>
                             <div id="off-desc">
-                                Larissa is a sophomore majoring in Physics. Her favorite styles of dance are jazz, contemporary, and ballet. She has been dancing for one year.<br>
-                                <i>&#9733; Email: <a href="mailto:henscl@rpi.edu">henscl@rpi.edu</a></i>
+                                Morgan is senior majoring in Applied Physics. Her favorite styles of dance are modern and musical theater but she also loves ballet and jazz. She has been dancing for 8 years.<br>
+                                <i>&#9733; Email: <a href="mailto:fordm2@rpi.edu">fordm2@rpi.edu</a></i>
                             </div>
                     </div>
                 </div>
@@ -121,7 +100,28 @@
                 <div class="col-sm-5">
                     <div id="off-photo-box">
                         <br>
-                        <img src="images/erica.jpg" alt="Erica" height="150px" width="150px">
+                        <img src="images/erinmahoney.jpg" alt="Erin" height="150px" width="150px">
+                    </div>
+                </div>
+                <div class="col-sm-7">
+                    <div id="off-text-box">
+                        <div id="off-name">
+                            <h4><b>ERIN MAHONEY</b></h4>
+                            <i>Treasurer</i><br></div>
+                            <div id="off-desc">
+                                Erin is a junior majoring in Biomedical Engineering. Her favorite styles of dance are hip hop and ballet. She has been dancing for 16 years.<br>
+                                <i>&#9733; Email: <a href="mailto:mahone3@rpi.edu">mahone3@rpi.edu</a></i>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                    <div id="off-photo-box">
+                        <br>
+                        <img src="images/ericabertolozzi.jpg" alt="Erica" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-7">
@@ -130,7 +130,7 @@
                             <h4><b>ERICA BERTOLOZZI</b></h4>
                             <i>Webmaster</i><br></div>
                             <div id="off-desc">
-                                Erica is a junior dual majoring in Computer Science and ITWS. Her favorite styles of dance are hip hop and contemporary. She has been dancing for six years.<br>
+                                Erica is a senior dual majoring in Computer Science and ITWS. Her favorite styles of dance are hip hop and contemporary. She has been dancing for 6 years.<br>
                                 <i>&#9733; Email: <a href="mailto:bertoe@rpi.edu">bertoe@rpi.edu</a></i>
                             </div>
                     </div>
