--- a/instructors.html
+++ b/instructors.html
@@ -58,7 +58,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/robin.png" alt="Robin" height="150px" width="150px">
+                        <img src="images/robingifford.png" alt="Robin" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -78,7 +78,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/erin.jpg" alt="Robin" height="150px" width="150px">
+                        <img src="images/erindooley.jpg" alt="Robin" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -98,7 +98,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/sean2.jpg" alt="Sean" height="150px" width="150px">
+                        <img src="images/seaniacopelli.jpg" alt="Sean" height="150px" width="150px">
                     </div>
                 </div>
                 
@@ -119,7 +119,7 @@
                 <div class="col-sm-3">
                     <div id="instr-photo-box">
                         <br>
-                        <img src="images/gina.jpg" alt="Gina" height="150px" width="150px">
+                        <img src="images/ginagrasso.jpg" alt="Gina" height="150px" width="150px">
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -139,7 +139,7 @@
                     <div class="col-sm-3">
                         <div id="instr-photo-box">
                             <br>
-                            <img src="images/rachel.jpg" alt="Rachel" height="150px" width="150px">
+                            <img src="images/racheltoups.jpg" alt="Rachel" height="150px" width="150px">
                         </div>
                     </div>
                     <div class="col-sm-9">
