added fall 2020 update

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </nav>
         <div class="carousel-caption">
-            <h1>DANCE CLUB SPRING 2020</h1>
+            <h1>DANCE CLUB FALL 2020</h1>
             <center><a id="jump-to-info" href="#info">&#10507;</a></center>
         </div>
         <div id="carouselFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -85,10 +85,11 @@
 
         <div class="containter-fluid" id="info">
             <div class="row justify-content-md-center">
-                <div class="col-sm-4 mb-3" id="announcements">
+                <div style="color: rgb(233, 64, 64)"class="col-sm-4 mb-3" id="announcements">
                     <center><h4><b><u>ANNOUNCEMENTS</u></b></h4></center>
-                        &#9733; Classes run from January 13th to April 18th.<br>
-                        &#9733; The free week of classes is <strong>January 13th to January 16th!</strong><br>
+                        &#9733; <b>FALL 2020 UPDATE:</b> Unfortunately, we are unable to host virtual classes this semester due to the Union's policy for club sports. <br>
+                        &#9733; Please fill out the form below to be added to our mailing list to receive club updates and more dancing opportunities!<br> 
+                        <center><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVcqhEs7FbHJjA-DVEqi5q6VOO4neENsRyIQGpXqa41AwjQA/viewform?usp=sf_link" style="color: rgb(235, 96, 96)"><b>Dance Club Mailing List Sign-Up</b></a></center>
                 </div>
                 <div class="col-sm-4 mb-3" id="aboutus">
                     <center><h4><b><u>ABOUT US</u></b></h4></center>
